# pm-sim

./: .gitignore  CHANGELOG.md  README.md  app.py  game_engine.py  main.py  pyproject.toml  utils.py
minigames/: __init__.py  guess_sharpe.py  market_making.py  market_trivia.py  trivia_bank.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_game_engine.py  test_hiring_and_finance.py
